feat: implement swagger OpenAPI documentation

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -8,10 +8,11 @@ services:
     container_name: expense-backend
     restart: always
     ports:
-      - "5555:5555"
+      - "5556:5556"
     environment:
-      - PORT=5555
+      - PORT=5556
       - MONGO_URI=mongodb://mongo:27017/expense_tracker
+      - NODE_ENV=production
     depends_on:
       - mongo
     # command: npm run dev
@@ -25,8 +26,8 @@ services:
     restart: always
     ports:
       - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
+    # volumes:
+    #   - mongo_data:/data/db
 
 volumes:
   mongo_data:
