--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.10-slim
 
-VOLUME [ "/home/cron" ]
-
 # Install cron
 RUN apt-get update && apt-get install -y cron && rm -rf /var/lib/apt/lists/*
 
@@ -10,16 +8,13 @@ WORKDIR /app
 
 # Copy project files
 COPY collect_dog.py /app/collect_dog.py
-COPY collect_dog.py /app/collect_dog.py
 COPY crontab.txt /etc/cron.d/dog-cron
 COPY requirements.txt /app/requirements.txt
 
 # Give execution permissions
 RUN chmod 0644 /etc/cron.d/dog-cron && \
     chmod +x /app/collect_dog.py && \
-    chmod +x /app/requirements.txt && \
-    chmod +x /app/cleanup_old.sh
-
+    chmod +x /app/requirements.txt
 # Install dependencies
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
