feat: add Dockerfile, running, and stopping process scripts

--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -7,14 +7,15 @@ RUN apt-get update && apt-get install -y cron && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 
 # Copy project files
-COPY collect_dog.py /app/collect_dog.py
-COPY crontab.txt /etc/cron.d/dog-cron
-COPY requirements.txt /app/requirements.txt
+COPY --exclude=src/crontab.txt src/ ./
+COPY src/crontab.txt /etc/cron.d/dog-cron
 
 # Give execution permissions
 RUN chmod 0644 /etc/cron.d/dog-cron && \
     chmod +x /app/collect_dog.py && \
-    chmod +x /app/requirements.txt
+    chmod +x /app/requirements.txt && \
+    chmod +x /app/cleanup_old.sh
+
 # Install dependencies
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
